Fixed url not showing because ob bad css selector

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,6 +48,11 @@ form {
 }
 
 .uploaded-url {
+    display: none;
+}
+
+.htmx-done+span .uploaded-url {
+    display: inline;
     width: 100%;
     line-break: anywhere;
 }
